# hardback

./: .gitignore  .travis.yml  MANIFEST.in  PLAN.txt  README.md  README.rst  UPDATES.rst  mypy.ini  psych.epub  pyproject.toml  requirements.txt  setup.py  test.sh  test_requirements.txt
css/: default.css
hardback/: book.py  chunk_sequence.py  chunk_writer.py  constants.py  cover.py  create_epub.py  dataclass.py  elapsed_bar.py  hardback.py  hasher.py  header.py  main.py  metadata.py  qr.py  qr_table.py  serialize.py  spec.py  write_chunks.py  write_epub.py  write_qr_code_chunks.py  write_qr_codes.py
hardback/book/: chapter1.py  chapter2.py  chunk_writer.py  create_epub.py  css.py  cursor.py  epub_book.py  hardback.py  metadata.py  metadata_chapter.py  page_breaker.py  qr_chapter.py  sections.py
hardback/data/: book.py  cover.py  dataclass.py  fill.py  serialize.py
hardback/qr/: codes.py  constants.py  fill.py  qr.py  qr_table.py  raw_codes.py  write.py  write_qr.py  writer.py
hardback/util/: chunk_sequence.py  elapsed_bar.py  files.py  hasher.py
images/: laser.epub
scripts/automator/hardback.app/Contents/: Info.plist  document.wflow
scripts/experiments/: qr_codes.py
scripts/main/: hardback  testing
test/hardback/: chunk_sequence_test.py  cover_test.py  create_epub_test.py  qr_table_test.py  serialize_test.py  skip_tests.py  write_epub_test.py
test/hardback/book/: create_epub_test.py  epub_book_test.py  hardback_test.py
test/hardback/data/: cover_test.py  serialize_test.py
test/hardback/qr/: fill_test.py  qr_table_test.py
test/hardback/util/: chunk_sequence_test.py
