[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py37']

[tool.poetry]
name = "hardback"
version = "0.9.2"
description = "Hardcopy backups of digital data"
authors = ["Tom Ritchford <tom@swirly.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
