[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py37']

[tool.poetry]
name = "hardback"
version = "0.9.2"
description = "📓 Hardcopy backups of digital data 📓"
authors = ["Tom Ritchford <tom@swirly.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
ebooklib = "^0.18"
attrs = "^22.2.0"
cfgs = "^0.10.2"
import-all = "^0.9.5"
pillow = "^9.4.0"
progress = "^1.6"
pypng = "^0.20220715.0"
pyyaml = "^6.0"
segno = "^1.5.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
coverage = "^7.1.0"
flake8 = "5.0.4"
import-all = "^0.9.5"
pytest = "^7.2.1"
pyfakefs = "^5.1.0"
mypy = "^0.991"


[tool.coverage]
[tool.coverage.run]
branch = "True"
source = "timedata"

[tool.coverage.report]
fail_under = "58"
skip_covered = "True"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
