[tool.poetry]
name = "hardback"
version = "0.9.2"
description = "📓 Hardcopy backups of digital data 📓"
authors = ["Tom Ritchford <tom@swirly.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
ebooklib = "*"
attrs = "*"
cfgs = "*"
import-all = "*"
pillow = "*"
progress = "*"
pypng = "*"
pyyaml = "*"
segno = "*"

[tool.poetry.group.dev.dependencies]
coverage = "*"
import-all = "*"
pytest = "*"
pyfakefs = "*"


[tool.coverage]
[tool.coverage.run]
branch = "True"
source = "timedata"

[tool.coverage.report]
fail_under = "58"
skip_covered = "True"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
